package Update;

option java_package = "com.sumscope.update";
option java_outer_classname = "Update";

message FileMD5 {
	required bytes fileName = 1;            // 文件名
 	required bytes md5 = 2;                 // 对应文件的MD5值
}

// 获取产品文件MD5值
message GetFilesMd5Req {
	required bytes productName = 1;         // 要获取MD5值的产品，如：“Quoteboard” “Sumscope IM”等
}
message GetFilesMd5Rsp {
	repeated FileMD5 fileMd5List = 1;       // 所有文件的MD5值列表
}

// 查询文件信息
message GetFileInfoReq {
	required bytes productName = 1;         // 产品名称
	required bytes fileName = 2;            // 要下载的文件名
}
message GetFileInfoRsp {
	required bytes fileName = 1;            // 要下载的文件名
	required int32 totalSize = 2;           // 文件的总大小
	required uint32 modifyTime = 3;         // 文件的修改时间
}

// 下载文件
message DownLoadFileReq {
	required bytes productName = 1;         // 产品名称
	required bytes fileName = 2;            // 要下载的文件名
	required int32 packetNum = 3;           // 文件数据的包号
	required int32 packetSize = 4;          // 文件数据包大小
}
message DownLoadFileRsp {
	required bytes fileName = 1;            // 数据对应的文件名
	required int32 packetNum = 2;           // 文件数据的包号
	required bytes fileBuffer = 3;          // 文件数据内容
}

// 上报用户升级结果
message UpdateResultReportReq {
	required bytes productName = 1;         // 产品名称
	required bytes userName = 2;            // 用户名
	required int32 resultType =3;           // 错误类型：下载/更新
	required int32 errorCode = 4;           // 错误码
	optional bytes hostIp = 5;              // 用户IP地址
	optional bytes hostMac = 6;             // 用户MAC地址
}
message UpdateResultReportRsp {
}

// 移动客户端的接口
message GetMobileUpdateInfoReq {
	required int32 channel  = 1;
	required int32 platform = 2;
	required int32 product  = 3;
	required string version = 4;
}
message GetMobileUpdateInfoRsp {
	required int32 isUpdate = 1;
	optional string url     = 2;
	optional string title   = 3;
	optional string msgInfo = 4;
}

// 设置移动客户端版本信息
message SetMobileUpdateInfoReq {
	optional int32 channel   = 1;
	optional int32 platform  = 2;
	optional int32 product   = 3;
	optional string version  = 4;
	optional string url      = 5;
	optional string title    = 6;
	optional string msgInfo  = 7;
}
message SetMobileUpdateInfoRsp {
	required int32 errorCode = 1; // 错误码【0表示成功】
}

// 获取产品版本信息
message GetProductVersionReq {
	required bytes productName = 1;         // 产品名称
}
message GetProductVersionRsp {
	required bytes version = 1;             // 最新版本
	required bytes updatelog = 2;           // 更新日志
}

// 获取删除列表信息
message GetDelInfoReq {
	required bytes productName = 1;         // 产品名称
}
message GetDelInfoRsp {
	repeated bytes fileList = 1;            // 待删除的文件列表
	repeated bytes dirList  = 2;            // 待删除的文件夹列表
}

// 获取文件版本信息
message GetFileVersionReq {
	required bytes productName = 1;         // 产品名称
}
message GetFileVersionRsp {
	repeated bytes fileList    = 1;         // 文件列表
	repeated int32 versionList = 2;         // 版本列表
	required int32 errorCode   = 3;         // 错误码
}

// 获取文件信息列表
message GetFileInfoListReq {
	required bytes productName  = 1;        // 产品名称
	repeated bytes fileNameList = 2;        // 文件列表
}
message GetFileInfoListRsp {
	repeated uint32 fileSize   = 1;         // 文件大小
	repeated uint32 modifyTime = 2;         // 文件的修改时间
}

// 获取移动平台的所有配置信息
message MobileUpdateInfo
{
	optional int32 channel   = 1;
	optional int32 platform  = 2;
	optional int32 product   = 3;
	optional string version  = 4;
	optional string url      = 5;
	optional string title    = 6;
	optional string msgInfo  = 7;
}
message GetAllMobileUpdateInfoReq {
}
message GetAllMobileUpdateInfoRsp {
	repeated MobileUpdateInfo infoList = 1;
}